rename SVS_RUNTIME_VERSION -> FAISS_SVS_RUNTIME_VERSION

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -393,11 +393,11 @@ if(WIN32)
 endif()
 
 if(FAISS_ENABLE_SVS)
-  target_compile_definitions(faiss PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
-  target_compile_definitions(faiss_avx2 PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
-  target_compile_definitions(faiss_avx512 PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
-  target_compile_definitions(faiss_avx512_spr PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
-  target_compile_definitions(faiss_sve PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss_avx2 PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss_avx512 PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss_avx512_spr PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss_sve PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
 endif()
 
 if(WIN32)
