--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -47,7 +47,7 @@ endif()
 add_executable(faiss_test ${FAISS_TEST_SRC})
 
 if(FAISS_ENABLE_SVS)
-  target_compile_definitions(faiss_test PRIVATE FAISS_ENABLE_SVS SVS_RUNTIME_VERSION=${SVS_RUNTIME_VERSION})
+  target_compile_definitions(faiss_test PRIVATE FAISS_ENABLE_SVS FAISS_SVS_RUNTIME_VERSION=${FAISS_SVS_RUNTIME_VERSION})
 endif()
 
 include(../cmake/link_to_faiss_lib.cmake)
