--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,9 +68,8 @@ option(FAISS_ENABLE_PYTHON "Build Python extension." ON)
 option(FAISS_ENABLE_C_API "Build C API." OFF)
 option(FAISS_ENABLE_EXTRAS "Build extras like benchmarks and demos" ON)
 option(FAISS_USE_LTO "Enable Link-Time optimization" OFF)
-option(FAISS_ENABLE_SVS "Enable SVS (Intel(R) Scalable Vector Search) integration." ON)
-set(FAISS_SVS_RUNTIME_VERSION "v0" CACHE STRING "Version of the SVS runtime API to use")
-set_property(CACHE FAISS_SVS_RUNTIME_VERSION PROPERTY STRINGS "v0")
+option(FAISS_ENABLE_SVS "Enable SVS (Intel(R) Scalable Vector Search) integration." OFF)
+option(FAISS_SVS_RUNTIME_VERSION "Version of the SVS runtime API to use" "v0")
 
 if(FAISS_ENABLE_GPU)
   if(FAISS_ENABLE_ROCM)
