Add initial WebAssembly bindings for FAISS
Introduces a new 'wasm' directory with CMake configuration, build scripts, TypeScript bindings, demo files, and tests to enable FAISS usage via WebAssembly in browsers and Node.js. Also refactors CMakeLists to improve path handling and adds options to enable/disable OpenMP and BLAS/LAPACK for better WASM compatibility.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ else()
   set(CMAKE_CXX_STANDARD 20)
 endif()
 
-list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Valid values are "generic", "avx2", "avx512", "avx512_spr", "sve".
 option(FAISS_OPT_LEVEL "" "generic")
