fix weak external symbol leakage in swig

--- a/faiss/python/CMakeLists.txt
+++ b/faiss/python/CMakeLists.txt
@@ -114,6 +114,13 @@ swig_add_library(swigfaiss
   SOURCES swigfaiss.swig
 )
 
+if(TARGET swigfaiss)
+    set_target_properties(swigfaiss PROPERTIES
+        CXX_VISIBILITY_PRESET hidden
+        VISIBILITY_INLINES_HIDDEN ON
+    )
+endif()
+
 set_property(TARGET swigfaiss PROPERTY SWIG_COMPILE_OPTIONS -doxygen)
 
 set_property(SOURCE swigfaiss_avx2.swig
