support SearchParameters for IndexBinary
- Add ParameterSpace support for IndexBinaryHNSW and IndexBinaryIVF
- Add support SearchParameters in search() method for IndexBinaryHNSW
  and IndexBinaryIVF
- Add support for passing parameters to IndexBinaryHNSW and
  IndexBinaryIVF from CAPI

Note: ID selector for BinaryIVF is not supported as it requires more
effort (see #4364).

fixes #3503

--- a/c_api/CMakeLists.txt
+++ b/c_api/CMakeLists.txt
@@ -13,6 +13,7 @@ set(FAISS_C_SRC
   AutoTune_c.cpp
   Clustering_c.cpp
   IndexFlat_c.cpp
+  IndexHNSW_c.cpp
   IndexIVFFlat_c.cpp
   IndexIVF_c.cpp
   IndexLSH_c.cpp
