--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,8 +73,7 @@ option(FAISS_ENABLE_C_API "Build C API." OFF)
 option(FAISS_ENABLE_EXTRAS "Build extras like benchmarks and demos" ON)
 option(FAISS_USE_LTO "Enable Link-Time optimization" OFF)
 option(FAISS_ENABLE_SVS "Enable SVS (Intel(R) Scalable Vector Search) integration." OFF)
-set(FAISS_SVS_RUNTIME_VERSION "v0" CACHE STRING "Version of the SVS runtime API to use")
-set_property(CACHE FAISS_SVS_RUNTIME_VERSION PROPERTY STRINGS "v0")
+option(FAISS_SVS_RUNTIME_VERSION "Version of the SVS runtime API to use" "v1")
 
 if(FAISS_ENABLE_GPU)
   if(FAISS_ENABLE_ROCM)
