set min required svs_runtime version

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -366,7 +366,7 @@ if(NOT WIN32)
 endif()
 
 if(FAISS_ENABLE_SVS)
-  find_package(svs_runtime REQUIRED)
+  find_package(svs_runtime 0.2.0 REQUIRED)
 
   target_link_libraries(faiss PUBLIC svs::svs_runtime)
   target_link_libraries(faiss_avx2 PUBLIC svs::svs_runtime)
