Enable SVS IVF index in faiss

--- a/faiss/CMakeLists.txt
+++ b/faiss/CMakeLists.txt
@@ -145,6 +145,9 @@ if(FAISS_ENABLE_SVS)
     svs/IndexSVSVamana.cpp
     svs/IndexSVSVamanaLVQ.cpp
     svs/IndexSVSVamanaLeanVec.cpp
+    svs/IndexSVSIVF.cpp
+    svs/IndexSVSIVFLVQ.cpp
+    svs/IndexSVSIVFLeanVec.cpp
     impl/svs_io.cpp
   )
 endif()
@@ -315,6 +318,9 @@ if(FAISS_ENABLE_SVS)
     svs/IndexSVSVamana.h
     svs/IndexSVSVamanaLVQ.h
     svs/IndexSVSVamanaLeanVec.h
+    svs/IndexSVSIVF.h
+    svs/IndexSVSIVFLVQ.h
+    svs/IndexSVSIVFLeanVec.h
   )
 endif()
 
