Add IndexBinaryFlat_c.cpp to c_api/CMakeLists.txt

--- a/c_api/CMakeLists.txt
+++ b/c_api/CMakeLists.txt
@@ -24,6 +24,7 @@ set(FAISS_C_SRC
   Index_c.cpp
   IndexBinary_c.cpp
   IndexBinaryIVF_c.cpp
+  IndexBinaryFlat_c.cpp
   IndexScalarQuantizer_c.cpp
   MetaIndexes_c.cpp
   clone_index_c.cpp
